--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* In your CSS or SCSS file */
+@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&family=Roboto&display=swap');
+
 body {
     margin: 0;
     padding: 0;
